--- a/globehopper/package.json
+++ b/globehopper/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.2",
+    "@react-google-maps/api": "^2.20.5",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/react-dom": "^19.0.3",
